# czi-minimal

./: .gitmodules  README.md  caduceus  config.yaml  hnet_config.yaml  hydra_setup.py  main.py  requirements.txt  requirments.txt
caduceus/: .gitignore  main.py  pyproject.toml
caduceus/config/: train.yaml
caduceus/config/experiment/: ar_baseline.yaml
caduceus/wrappers/: pretrained.py
callbacks/: flop_counter.py  visualizer.py
config/: config.yaml  train.yaml
config/dataset/: angiosperm_16.yaml
config/eval_dataset/: maize_allele_freq.yaml
config/experiment/: debug_flops.yaml  sweep_N.yaml  sweep_size.yaml
config/hydra/: default.yaml
config/loggers/: wandb.yaml
config/model/: ar.yaml  hnet.yaml  pcad1_l20_from_scratch.yaml  pcad1_l20_pretrained.yaml
config/paths/: default.yaml
config/trainer/: default.yaml  fixed_batch.yaml
hnet/: README.md  pyproject.toml  requirements.txt
hnet/config/hydra/: default.yaml
hnet/config/optimizer/: decoupled_adamw.yaml
hnet/config/paths/: default.yaml
hnet/config/scheduler/: cosine_annealing_with_warmup.yaml
hnet/hnet/models/: config_hnet.py  hnet.py  mixer_seq.py
hnet/hnet/modules/: block.py  isotropic.py  mha.py  mlp.py  utils.py
hnet/hnet/utils/: __init__.py  counters.py  tokenizers.py
wrappers/: composer.py  hnet.py
